add: ホーム画面追加時のアイコンを追加

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="ito">
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="favicon.svg">
 
     <!-- SortableJS Library & Swap Plugin -->
     <script src="https://cdn.jsdelivr.net/npm/sortablejs@1.15.0/Sortable.min.js"></script>
@@ -392,9 +392,9 @@
             padding: 8px;
             text-align: center;
             font-weight: 900;
-            color: var(--text-muted);
-            font-size: 0.9rem;
-            opacity: 0.6;
+            color: var(--primary-color);
+            font-size: 1.2rem;
+            opacity: 0.8;
             margin: 10px 0;
             user-select: none;
         }
